move org.sn.myutils.testutils.json to org.sn.myutils.jsontestutils