@@ -10,9 +10,9 @@
         <version>1.0.0</version>
     </parent>
 
-    <artifactId>myutils-testutils-json</artifactId>
+    <artifactId>myutils-jsontestutils</artifactId>
     <packaging>jar</packaging>
-    <name>org.sn.myutils: myutils-testutils-json</name>
+    <name>org.sn.myutils: myutils-jsontestutils</name>
 
     <properties>
         <fasterjackson.version>2.12.2</fasterjackson.version>
@@ -52,6 +52,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- because the unit tests are package private, call add-opens in order to allow the unit test franework to read the tests -->
+                    <argLine>
+                        ${maven-surefire-plugin.argLine}
+                        --add-opens org.sn.myutils.jsontestutils/org.sn.myutils.jsontestutils=ALL-UNNAMED
+                        --add-opens org.sn.myutils.jsontestutils/org.sn.myutils.jsontestutils.jackson=ALL-UNNAMED
+                    </argLine>
+                </configuration> 
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
